# SimAI-Bench

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/ml_docking/: fine_tuning.py  inference.py  sim.py  sorter.py  workflow.py
examples/msr_workflow/: sim_exec.py  train_ai_exec.py  workflow.py
examples/msr_workflow/configs/: sim_config.json  sim_telemetry.json  train_ai_config.json
examples/msr_workflow/experiments/: create_experiments.sh  job_script_dragon_simulation.sh  job_script_dragon_training.sh  job_script_filesystem.sh  job_script_redis_simulation.sh  job_script_redis_training.sh  submit_missing_simulations.sh
examples/shooting_nekrs/: infer_ai_exec.py  sim_exec.py  train_ai_exec.py  workflow.py
examples/shooting_nekrs/configs/: infer_ai_config.json  sim_config.json  sim_telemetry.json  train_ai_config.json
examples/shooting_nekrs/experiments/: create_experiments.sh  job_script_dragon.sh  job_script_filesystem.sh  job_script_nodelocal.sh  job_script_redis.sh  submit_missing_simulations.sh
online_training/run_scripts/local/: run_ssim_gnn_debug.sh  run_ssim_gnn_small.sh  run_ssim_mlp.sh  run_ssim_mlp_debug.sh  run_ssim_mlp_small.sh  train_config.yaml
online_training/run_scripts/polaris/: run_ssim_mlp_debug.sh  ssim_config.yaml
online_training/src/: main.py
online_training/src/backends/: ssim_client.py
online_training/src/data_producers/: sim.py  utils.py
online_training/src/drivers/: ssim_driver.py
online_training/src/train/: datasets.py  main.py  models.py  offline_train.py  online_train.py  time_prof.py  train.py  utils.py
run_scripts/online_training/local/: run_ssim_gnn_debug.sh  run_ssim_gnn_small.sh  run_ssim_mlp_debug.sh  run_ssim_mlp_small.sh
run_scripts/online_training/polaris/: run_ssim_mlp_debug.sh  run_ssim_mlp_small.sh  run_ssim_mlp_small_clustered.sh  run_ssim_mlp_small_colocated.sh  train_config.yaml
src/SimAIBench/: __init__.py  component.py  config.py  kernel.py  launcher.py  orchestrator.py  simulation.py  training.py  utils.py  workflow.py
src/SimAIBench/dag/: __init__.py  _callables.py  _utils.py  dag.py  future.py  store.py
src/SimAIBench/datastore/: __init__.py  base.py  daos.py  datastore.py  dragon.py  filesystem.py  redis.py  servermanager.py  wrapper.py
src/SimAIBench/executors/: __init__.py  base.py  dragon.py  ensemble.py  local.py  taps.py
src/SimAIBench/orchestrator/: __init__.py  client.py  server.py
src/SimAIBench/profiling/: __init__.py  plugins.py  profiler.py  timer.py  utils.py
src/SimAIBench/resources/: __init__.py  cluster.py  node.py
src/SimAIBench/tests/: test_profiler.py  test_workflow.py  test_workflow_mpi.py
src/online_training/backends/: dragon.py  (+2 more)
utils/: create_daos.sh  create_daos_python.sh  destroy_daos.sh
(+164 files in other folders)
