# file: pyproject.toml

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["SimAIBench"]

[project]
name = "SimAI-Bench"
description = "Benchmarks for coupled simulation and AI/ML workflows"
authors = [
    {name = "Hari Tummalapalli", email = "htummalapalli@anl.gov"},
    {name = "Riccardo Balin", email = "rbalin@anl.gov"},
]
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    'numpy',
    'h5py',
    'mpi4py',
    'torch',
    'pytest',
    'redis',
    'dragonhpc==0.12rc2',
    'SciencePlots',
    'pyitt',
    'ensemble_launcher @ git+https://github.com/argonne-lcf/ensemble_launcher.git@4d4f6bd2dcf367cb0011aaa24b3d518debf0913a',

]
[project.optional-dependencies]
gpu = [
    "dpnp",
    "cupy"
]

[project.urls]
source = "github.com/argonne-lcf/SimAI-Bench"
